--- a/Demo/package.json
+++ b/Demo/package.json
@@ -6,8 +6,8 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
-    "react": "15.2.1",
-    "react-native": "^0.29.2",
+    "react": "~15.4.2",
+    "react-native": "^0.41.2",
     "react-native-transformable-image": "0.0.18"
   }
 }
